# ComfyUI-MotionThiefExperiment

./: .gitignore  README.md  __init__.py  pyproject.toml
example_workflows/: motion_thief_example.json
modules/: block_type.py  ref_controller.py  temporal_attn_wrapper.py  unet_wrapper.py
nodes/: ref_apply_node.py  ref_settings_node.py
reference/: ref_config.py  ref_controller.py  ref_mode.py
utils/: module_utils.py  ref_utils.py  wrapper_utils.py
