[project]
name = "comfyui-motionthiefexperiment"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/logtd/ComfyUI-MotionThiefExperiment"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MotionThiefExperiment"
Icon = ""
